# AIDotNavigation

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  object_agent.py  path_navigator.py
scripts/: test.py
